--- a/piipltd.com/about.html
+++ b/piipltd.com/about.html
@@ -14,6 +14,8 @@
     <link href="assets/css/swiper.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="https://www.themechampion.com/">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/3397add359.js" crossorigin="anonymous"></script>
     <title>Prime Investement & Infrastructural Partners Limited </title>
 </head>
 
@@ -22,7 +24,7 @@
         <div class="tt-header">
             <div class="container">
                 <div class="top-inner clearfix">
-                    <a class="responsive_logo" href="index.html"><img src="assets/images/footer-logo.png" alt=""></a>
+                    <a class="responsive_logo" href="index.html"><img src="assets/images/footer-logo.png" alt="" width="14%"></a>
                     <div class="cmn-toggle-switch"><span></span></div>
                 </div>
                 <div class="toggle-block">
@@ -37,7 +39,7 @@
                                 </li>
                             </ul>
                         </nav>
-                        <div class="nav-more mobile_search">
+                        <!-- <div class="nav-more mobile_search">
                             <div class="tz-header-search pull-right">
                                 <span class="icon_search tz_icon_search"></span>
                                 <span class="icon_close tz_icon_close"></span>
@@ -49,7 +51,7 @@
                                     </form>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="top-line-right">
@@ -118,7 +120,7 @@
                                         <i class="fa fa-users"></i>
                                     </div>
                                     <div class="text">
-                                        <h4 class="tt-sub-title-sub">Our Mission</h4>
+                                        <h4 class="tt-sub-title-sub">Our Vision</h4>
                                         <div class="simple-text">
                                             <p>Provider of Premium and Affordable Real Esate Development in Africa <br>. </p>
                                         </div>
@@ -168,7 +170,7 @@
                         <ul class="address">
 
                             <li><i class="fa fa-map-marker"></i> 16 Afolabi Aina, Off Allen Avenue, Ikeja, Lagos, Nigeria </li>
-                            <li><i class="fa fa-phone"></i> +1 (123) 456-7890</li>
+                            <li><i class="fa fa-phone"></i>+234-803-940-8165</li>
                             <li><i class="fa fa-envelope-o"></i><a href="https://www.themechampion.com/"> info@piipltd.com</a></li>
                         </ul>
 
