--- a/piipltd.com/contactus.html
+++ b/piipltd.com/contactus.html
@@ -15,6 +15,8 @@
     <link href="assets/css/swiper.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://www.themechampion.com/">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/3397add359.js" crossorigin="anonymous"></script>
     <title>Prime Investement & Infrastructural Partners Limited </title>
 </head>
 
@@ -59,7 +61,7 @@
         <div class="tt-header">
             <div class="container">
                 <div class="top-inner clearfix">
-                    <a class="responsive_logo" href="index.html"><img src="assets/images/footer-logo.png" alt=""></a>
+                    <a class="responsive_logo" href="index.html"><img src="assets/images/footer-logo.png" alt="" width="14%"></a>
                     <div class="cmn-toggle-switch"><span></span></div>
                 </div>
                 <div class="toggle-block">
@@ -78,7 +80,7 @@
                             </ul>
                         </nav>
 
-                        <div class="nav-more mobile_search">
+                        <!-- <div class="nav-more mobile_search">
                             <div class="tz-header-search pull-right">
                                 <span class="icon_search tz_icon_search"></span>
                                 <span class="icon_close tz_icon_close"></span>
@@ -90,7 +92,7 @@
                                     </form>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="top-line-right">
@@ -178,7 +180,13 @@
                 <div class="row">
                     <div class="contact_form_01">
                         <div class="col-md-10 col-sm-12 col-xs-12 col-md-offset-1">
-                            <form action="https://www.themechampion.com/templates/bizada_html_landing_page/theme/contact_process.php" method="post" id="contactForm">
+                            <form action="https://formsubmit.co/aea29906d1e4a1ca5a33993b35387042 " method="POST" id="contactForm">
+                                <!-- Honeypot -->
+                                <input type="text" name="_honey", style="display: none;">
+                                <!-- Disable Captcha-->
+                                <input type="hidden" name="_captcha" value="false">
+
+                                <input type="hidden" name="_next" value="http://127.0.0.1:5500/piipltd.com/success.html">
                                 <div class="form-group col-md-6 pl0">
                                     <input type="text" name="name" id="name" class="form-control" placeholder="Name" required>
                                 </div>
@@ -229,7 +237,7 @@
                             <ul class="address">
 
                                 <li><i class="fa fa-map-marker"></i> 16 Afolabi Aina, Off Allen Avenue, Ikeja, Lagos, Nigeria </li>
-                                <li><i class="fa fa-phone"></i> +1 (123) 456-7890</li>
+                                <li><i class="fa fa-phone"></i>+234-803-940-8165</li>
                                 <li><i class="fa fa-envelope-o"></i><a href="https://www.themechampion.com/"> info@piipltd.com</a></li>
                             </ul>
 
