--- a/piipltd.com/team.html
+++ b/piipltd.com/team.html
@@ -14,6 +14,8 @@
     <link href="assets/css/swiper.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://www.themechampion.com/">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/3397add359.js" crossorigin="anonymous"></script>
     <title>Prime Investement & Infrastructural Partners Limited </title>
 </head>
 
@@ -75,7 +77,7 @@
                                 </li>
                             </ul>
                         </nav>
-                        <div class="nav-more mobile_search">
+                        <!-- <div class="nav-more mobile_search">
                             <div class="tz-header-search pull-right">
                                 <span class="icon_search tz_icon_search"></span>
                                 <span class="icon_close tz_icon_close"></span>
@@ -87,7 +89,7 @@
                                     </form>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="top-line-right">
@@ -314,7 +316,7 @@
                     <div class="row">
                         <div class="col-sm-6 col-md-4 ">
                             <a class="tt-footer-logo" href="index.html">
-							<img class="img-responsive" src="assets/images/footer-logo.png" alt="">
+							<img class="img-responsive" src="assets/images/footer-logo.png" alt="" width="14%">
                         </a>
                             <div class="simple-text dark padding-sm">
                                 <p>“Provider of Premium and Affordable Real Esate Development in Africa..... ”</p>
@@ -322,7 +324,7 @@
                             <ul class="address">
 
                                 <li><i class="fa fa-map-marker"></i> 16 Afolabi Aina, Off Allen Avenue, Ikeja, Lagos, Nigeria </li>
-                                <li><i class="fa fa-phone"></i> +1 (123) 456-7890</li>
+                                <li><i class="fa fa-phone"></i> +234-803-940-8165</li>
                                 <li><i class="fa fa-envelope-o"></i><a href="https://www.themechampion.com/"> info@piipltd.com</a></li>
                             </ul>
 
